--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,8 @@ website:
     right:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - href: projects.qmd
+        text: Projects 
 
   page-footer: 
     right: "&copy; 2025, Sophia Yi"
